--- a/css/default.css
+++ b/css/default.css
@@ -46,6 +46,7 @@
 	a
 	{
 		color: #0000FF;
+    text-decoration: none;
 	}
 	
 	a:hover
@@ -734,9 +735,10 @@
 	
   .button-link {
     padding: 10px 15px;
-    color: #888;
-	border-style:solid;
-	border-width:1px;
+    color: #aaa;
+    text-decoration: none;
+    border-style:solid;
+    border-width:1px;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
     border-radius: 10px;
     -webkit-transition-duration: 0.4s;
@@ -754,10 +756,10 @@
       text-decoration: none;
       color: #FFF;
   }
-  .button-link:hover a{
+  a .button-link:hover {
       color: #FFF;
   }
-  .button-link a{
+  a .button-link{
     color: rgba(255,255,255,0.75);
     text-decoration: none
   }
